# mastermind_Rust

./: Cargo.toml  README.md  build.rs
src/: main.rs
ui/: appwindow.slint  dialogs.slint  pegs.slint
